--- a/start.html
+++ b/start.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <button onclick = "window.solana.connect()"> Connect Wallet </button>
+        <p id = "addr"> </p>
         <h2> Sport (number 0 - 255)</h2>
         <input type = "number" id = "sport" value = "1" />
 
@@ -44,6 +45,11 @@
             var connection = new solanaWeb3.Connection("https://api.devnet.solana.com");
             var burner = solanaWeb3.Keypair.fromSecretKey(new Uint8Array([33, 2, 27, 57, 123, 10, 206, 228, 205, 65, 217, 174, 205, 73, 187, 239, 28, 155, 245, 64, 235, 186, 149, 174, 16, 123, 162, 33, 164, 168, 76, 19, 150, 33, 165, 201, 131, 31, 183, 88, 154, 249, 6, 48, 254, 127, 127, 103, 142, 248, 150, 170, 79, 1, 21, 41, 238, 134, 53, 215, 8, 247, 190, 153]));
             
+            function showWallet(){
+                document.getElementById("addr").innerHTML = window.solana.publicKey.toBase58();
+            }
+            window.solana.on("connect", showWallet);
+
             function numToBytes(num, bytes){
                 let output = [0, 0, 0, 0, 0, 0, 0, 0];
                 for(let pow = 7; pow >= 0; pow--){
