added match to index

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1><a href = "start.html"> start bet </a></h1>
         <h1><a href = "view.html"> view bets </a></h1>
+        <h1><a href = "match.html"> match bet </a></h1>
     </body>
 </html>
