--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1><a href = "start.html"> start bet </a></h1>
         <h1><a href = "view.html"> view bets </a></h1>
         <h1><a href = "match.html"> match bet </a></h1>
+        <h1><a href = "parsh.html"> partial match bet </a></h1>
     </body>
 </html>
