--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1><a href = "view.html"> view bets </a></h1>
         <h1><a href = "match.html"> match bet </a></h1>
         <h1><a href = "parsh.html"> partial match bet </a></h1>
+        <h1><a href = "cancel.html"> Cancel bet </a></h1>
     </body>
 </html>
