ready for soft launch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1><a href = "match.html"> match bet </a></h1>
         <h1><a href = "parsh.html"> partial match bet </a></h1>
         <h1><a href = "cancel.html"> Cancel bet </a></h1>
+        <h1><a href = "setDelay.html"> Set cancelation delay </a></h1>
         <h1><a href = "grade.html"> Grade bet </a></h1>
     </body>
 </html>
